corrected some spacing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -405,8 +405,8 @@ nav {
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 0;
-    right: 0;
+    left: -2rem;
+    right: -2rem;
     z-index: -1;
   }
   .project-content {
